<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:LuckyWheel="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/almost_black"
    tools:context=".viewer.Viewer">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        LuckyWheel:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        LuckyWheel:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        LuckyWheel:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        LuckyWheel:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        LuckyWheel:layout_constraintGuide_percent="0.86" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        app:layout_constraintBottom_toTopOf="@+id/operator_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/workingsTV"
            style="@style/workingTextViewStyle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            LuckyWheel:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultsTV"
            style="@style/resultTextViewStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/workingsTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/workingsTV"
            app:layout_constraintTop_toBottomOf="@+id/workingsTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/operator_container"
        style="@style/buttonRow"
        LuckyWheel:layout_constraintBottom_toTopOf="@+id/guideline3"
        LuckyWheel:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/allClearAction"
            style="@style/buttonNumberStyle"
            android:text="@string/ac"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/backSpaceAction"
            style="@style/buttonNumberStyle"
            android:text="@string/delete_number"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn12"
            style="@style/buttonOperatorStyle"
            android:layout_weight="0.5"
            android:text="@string/btn_operand_bracket_2" />

        <Button
            android:id="@+id/btn11"
            style="@style/buttonOperatorStyle"
            android:layout_weight="0.5"
            android:text="@string/btn_operand_bracket_1" />

        <Button
            android:id="@+id/btnOperation0"
            style="@style/buttonOperatorStyle"
            android:text="@string/btn_operate_division" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="@style/buttonRow"
        LuckyWheel:layout_constraintBottom_toTopOf="@+id/guideline5"
        LuckyWheel:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn7"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_7" />

        <Button
            android:id="@+id/btn8"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_8" />

        <Button
            android:id="@+id/btn9"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_9" />

        <Button
            android:id="@+id/btnOperation1"
            style="@style/buttonOperatorStyle"
            android:text="@string/btn_operate_multiplication" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/buttonRow"
        LuckyWheel:layout_constraintBottom_toTopOf="@+id/guideline6"
        LuckyWheel:layout_constraintEnd_toEndOf="parent"
        LuckyWheel:layout_constraintTop_toTopOf="@+id/guideline5">

        <Button
            android:id="@+id/btn4"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_4" />

        <Button
            android:id="@+id/btn5"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_5" />

        <Button
            android:id="@+id/btn6"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_6" />

        <Button
            android:id="@+id/btnOperation2"
            style="@style/buttonOperatorStyle"
            android:text="@string/btn_operate_subtraction" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="@style/buttonRow"
        LuckyWheel:layout_constraintBottom_toTopOf="@+id/guideline7"
        LuckyWheel:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn1"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_1" />

        <Button
            android:id="@+id/btn2"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_2" />

        <Button
            android:id="@+id/btn3"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_3" />

        <Button
            android:id="@+id/btnOperation3"
            style="@style/buttonOperatorStyle"
            android:text="@string/btn_operate_addition" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        style="@style/buttonRow"
        LuckyWheel:layout_constraintHorizontal_bias="0.0"
        LuckyWheel:layout_constraintTop_toTopOf="@+id/guideline7"
        LuckyWheel:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn10"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_dot" />

        <Button
            android:id="@+id/btn0"
            style="@style/buttonNumberStyle"
            android:text="@string/btn_operand_0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equals"
            style="@style/buttonNumberStyle"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="2"
            android:background="@color/orange"
            android:text="@string/btn_operate_answers"
            android:textSize="40sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>